# eq-runner-mock-cir

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml  pull_request.yml
app/: main.py  test_app.py
scripts/: load_questionnaire_schemas.sh  load_runner_schemas.sh
