[tool.poetry]
name = "eq-runner-mock-cir"
version = "0.1.0"
description = "ONS Digital eQ Runner Mock CIR"
authors = ["ONSDigital"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = "^0.23.2"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "24.4.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"